table and column

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
  
 </head>
 <body>
+
+      
  <div id="title" class="jumbotron">
     <p>
     <center>
@@ -21,8 +23,9 @@
     </p>
       <h1><center>St. Louis Cardinals<Center></h1>
       <div class="container">
-  <h2>Playoff Schedule</h2>
-  <p>Better luck next time</p>            
+  <h2><center>Playoff Schedule</center></h2>
+  <p><center>Better luck next time</center></p>  
+  <div class="col-md-9 col-sm-9 col-xs-9">          
   <table class="table table-bordered">
     <thead>
       <tr>
@@ -54,6 +57,18 @@
       </tr>
     </tbody>
   </table>
+  </div>
+    <div class="col-xs-3 col-md-3 col-lg-3 col-push-11" > <h3><center>Roster</center></h3>
+      <ul>
+          <li> Steve Chisek </li>
+          <li> Steve Chisek </li>
+          <li> Steve Chisek </li>
+          <li> Steve Chisek </li>
+          <li> Steve Chisek </li>
+      </ul>
+      </div>
+    </div>
+    </div>
 </div>
 
  </div>
